find_package(OpenCV 3.0 QUIET)
add_subdirectory("wiiyourself")
if(OpenCV_FOUND)
    otr_module(tracker-pt)
    set(modules opencv_core opencv_videoio opencv_imgproc)
    target_link_libraries(opentrack-tracker-pt opentrack-cv opentrack-tracker-wii-pt-wiiyourself ${modules})
    target_include_directories(opentrack-tracker-pt SYSTEM PUBLIC ${OpenCV_INCLUDE_DIRS})
endif()
